chore: fix surefire argline