@@ -39,7 +39,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.3.1</version>
         <configuration>
-          <argLine>--add-opens java.base/jdk.internal.classfile.impl=ALL-UNNAMED</argLine>
+          <argLine>--add-opens java.base/jdk.internal.classfile.impl=ALL-UNNAMED --enable-preview</argLine>
         </configuration>
       </plugin>
       <plugin>
